[gd_scene load_steps=8 format=3 uid="uid://d3vymx6v3011v"]

[ext_resource type="Texture2D" uid="uid://ckqst5ofsqp14" path="res://Entities/LevelObstacles/Obstacle_Assets/PlantAlternate-Vinespiker-crop.png" id="1_jgt23"]
[ext_resource type="Script" path="res://Entities/LevelObstacles/vineWhipper.gd" id="1_uchbx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4rt6d"]
radius = 65.0077

[sub_resource type="Animation" id="Animation_xr1sq"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:curr_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ie8h3"]
resource_name = "active_attack"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.166667, 0.3, 0.433333, 0.6, 0.733333, 0.866667, 0.966667, 1.13333, 1.26667, 1.43333, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 9, 3, 7, 4, 5, 6, 8, 2, 10, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.1, 0.433333, 0.566667, 1.1, 1.4, 1.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:curr_state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w02gq"]
_data = {
"Idle": SubResource("Animation_xr1sq"),
"active_attack": SubResource("Animation_ie8h3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6a2mc"]
radius = 55.0091

[node name="VineWhipper" type="Area2D"]
script = ExtResource("1_uchbx")
curr_state = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4rt6d")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(1.17742, 1.28788)
texture = ExtResource("1_jgt23")
hframes = 11

[node name="AnimatedVineWhipper" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w02gq")
}

[node name="DetectionArea" type="Area2D" parent="."]
monitorable = false

[node name="DetectionAreaBody" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_6a2mc")

[connection signal="area_entered" from="." to="." method="_on_vine_area_entered"]
[connection signal="animation_finished" from="AnimatedVineWhipper" to="." method="_on_vine_whipper_animation_finished"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_exited"]
